[gd_scene load_steps=8 format=3 uid="uid://bqaeo7l8e6b7l"]

[ext_resource type="Script" uid="uid://bduqcgjswpdow" path="res://scripts/homing_missile.gd" id="1_j864u"]
[ext_resource type="Texture2D" uid="uid://uoahg8spuqbp" path="res://assets/sprites/items/HealthPack.png" id="2_j864u"]
[ext_resource type="Texture2D" uid="uid://cqc6bvqop0bt0" path="res://assets/sprites/GameLogoTest.webp" id="3_a6ut0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j864u"]
size = Vector2(14.153847, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6ut0"]
atlas = ExtResource("2_j864u")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_60i8j"]
atlas = ExtResource("3_a6ut0")
region = Rect2(0, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_60i8j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6ut0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_60i8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60i8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60i8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60i8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60i8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60i8j")
}],
"loop": false,
"name": &"explode",
"speed": 5.0
}]

[node name="homing_missile" type="Area2D"]
z_as_relative = false
script = ExtResource("1_j864u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.9230765, 0)
shape = SubResource("RectangleShape2D_j864u")

[node name="rocket_sprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_60i8j")
autoplay = "default"

[node name="despawn_timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="despawn_timer" to="." method="_on_despawn_timer_timeout"]
